Upload attempt now expects submitter pubkey
